RESOLVED FIXED69335
[Chromium] Web Inspector: save inspector state into single string instead of string map
https://bugs.webkit.org/show_bug.cgi?id=69335
Summary [Chromium] Web Inspector: save inspector state into single string instead of ...
Yury Semikhatsky
Reported 2011-10-04 06:09:44 PDT
We anyway use only one property named "inspector-state"(see WebDevToolsAgentImpl.cpp).
Attachments
Patch (4.36 KB, patch)
2011-10-04 07:01 PDT, Yury Semikhatsky
no flags
Patch (4.82 KB, patch)
2011-10-04 08:41 PDT, Yury Semikhatsky
pfeldman: review+
Yury Semikhatsky
Comment 1 2011-10-04 07:01:06 PDT
Yury Semikhatsky
Comment 2 2011-10-04 07:11:53 PDT
Yury Semikhatsky
Comment 3 2011-10-04 07:26:20 PDT
This was only first step. Next step is to remove obsolete methods.
Yury Semikhatsky
Comment 4 2011-10-04 08:41:17 PDT
Yury Semikhatsky
Comment 5 2011-10-05 01:21:58 PDT
Note You need to log in before you can comment on or make changes to this bug.