[Chromium] Web Inspector: save inspector state into single string instead of string map https://bugs.webkit.org/show_bug.cgi?id=69335

Added explicit methods for saving and restoring agent runtime state.

Reviewed by Pavel Feldman.

* public/WebDevToolsAgent.h:
* public/WebDevToolsAgentClient.h:
(WebKit::WebDevToolsAgentClient::saveAgentRuntimeState):
* src/WebDevToolsAgentImpl.cpp:
(WebKit::WebDevToolsAgentImpl::reattach):
(WebKit::WebDevToolsAgentImpl::updateInspectorStateCookie):
* src/WebDevToolsAgentImpl.h:

Canonical link: https://commits.webkit.org/85352@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@96590 268f45cc-cd09-0410-ab3c-d52691b4dbfc