Source/WebKit/chromium/public/WebDevToolsAgentClient.h
@@ -48,6 +48,9 @@ public:
 
     // Notifies host upon runtime feature being enabled/disabled.
     virtual void runtimePropertyChanged(const WebString& name, const WebString& value) { }
+    // Save the agent state in order to pass it later into WebDevToolsAgent::reattach
+    // if the same client is reattached to another agent.
+    virtual void saveAgentRuntimeState(const WebString&) { }
 
     class WebKitClientMessageLoop {
     public:
